# python-project-template

./: .gitignore  README.md  pyproject.toml
deploy/: Dockerfile
src/main/: app.py  service.py
src/test/: __init__.py  conftest.py  test_app.py  test_service.py
